[package]
name = "github-issue-notify-discord"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
# discord-flows = "0.3.1"
dotenv = "0.15.0"
slack-flows = "0.2.6"


[dependencies.github-flows]
octocrab_wasi = "0.18.3"
